--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -2,6 +2,8 @@ button{
     background-color: firebrick;
     margin: 2em;
     height: 3em;
-    width: 10em;
+    width: 15em;
     color: floralwhite;
+    box-shadow: 2px 2px 2px white;
+    display: inline-block;
 }
