--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,7 +1,8 @@
 .movie-container{
     display: grid;
-    grid-template-columns: repeat(4,20%);
+    grid-template-columns: repeat(5,20%);
     gap:1em;
+    margin-top: 2em;
 }
 .film{
     background-color:darkolivegreen;
