--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -4,6 +4,9 @@ button{
     height: 3em;
     width: 15em;
     color: floralwhite;
-    box-shadow: 2px 2px 2px white;
+    box-shadow: 2px 2px 2px darkolivegreen;;
     display: inline-block;
+}
+.form_submit{
+    margin: 1em auto;
 }
